# summer-learning

./: .env.example  .gitignore  README.md  docker-compose.yml  generate_final_report.py  generate_report.py  init.sh  main.py  manage-infra.sh  nginx.conf  pyproject.toml  run-backend.sh  蓝莓产量预测分析实训报告.docx
backend/: Dockerfile  REQUIREMENTS.md  alembic.ini  pyproject.toml  schema.sql  seed.py  seed_data.sql
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: main.py
backend/app/agent/: __init__.py  graph.py
backend/app/agent/tools/: __init__.py  reimburse_tools.py
backend/app/api/v1/: __init__.py  approval.py  budget.py  chat.py  reimbursements.py  upload.py
backend/app/core/: celery_app.py  config.py  database.py  exceptions.py  middleware.py
backend/app/models/: __init__.py  reimbursement.py
backend/app/schemas/: __init__.py  reimbursement.py
backend/app/services/: __init__.py  email_svc.py  ocr_svc.py  reimbursement_svc.py
backend/seed_data/: seed.py
backend/tasks/: email_task.py  ocr_task.py
backend/tests/: test_llm_chat.py
docs/: API.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/pages/ChatReimbursement/: index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/StatusQuery/: index.tsx
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
infra/: dump.rdb
infra/redis/data/: dump.rdb
notebooks/: 01_data_overview.ipynb  02_eda.ipynb  03_clustering.ipynb  04_linear_regression.ipynb  05_random_forest.ipynb  06_model_comparison.ipynb
outputs/: L1-L4答辩对照摘要.txt
outputs/models/: test_predictions.csv
slides/: compile.js  slide-01.js  slide-02.js  slide-03.js  slide-04.js  slide-05.js  slide-06.js  slide-07.js  slide-08.js  slide-09.js  slide-10.js
slides/output/: 蓝莓产量预测答辩PPT.pptx
src/: config.py  pipeline.py
src/analysis/: intermediate_analysis.py
src/data/: loader.py  preprocessor.py
src/features/: engineering.py
src/models/: clustering.py  ensemble.py  evaluation.py  linear_regression.py  random_forest.py  xgboost_model.py
src/visualization/: plots.py
tests/: __init__.py  test_models.py  test_preprocessor.py
