[project]
name = "blueberry"
version = "0.1.0"
description = "Wild Blueberry Yield Prediction Analysis - K-Means Clustering, Linear Regression, and Random Forest"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "joblib>=1.4.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "xgboost>=2.1.0",
]
