[project]
name = "reimburse-agent-backend"
version = "0.1.0"
description = "Enterprise Finance Reimbursement Assistant - Backend API & Agent Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "aiosmtplib>=3.0.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.2.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
